auth-service/Chart-auth-service/templates/postgres-statefulset-replica-1.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres-sts
  serviceName: postgres-service
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres-sts
    spec:
      terminationGracePeriodSeconds: 15
      containers:
      - name: postgres-container
        image: postgres:17
        volumeMounts:
        - name: postgres-pvc
          mountPath: /var/lib/postgresql/data
        resources:
          requests:
            cpu: 1
            memory: 4Gi
  volumeClaimTemplates:
  - metadata:
      name: postgres-pvc
    spec:
      accessModes:
        - ReadWriteOnce
      # storageClassName: ebs-sc
      resources:
        requests:
          storage: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  ports:
  - port: 5432
  clusterIP: None
  selector:
    app: postgres-sts
